# master-thesis

./: .gitignore  10_epochs.txt  README  empty_files.txt  tfenv-reqs.txt
Binaries/: Classifier.py  Ensemble.py  Generator.py  Hardware.py  Network.py  Signal.py  Testing.py  __config__.py  __init__.py
Binaries/TriggerStudyBinaries_v1/: Classifier.py  Generator.py
Binaries/TriggerStudyBinaries_v2/: Classifier.py  Generator.py  __config__.py
Binaries/TriggerStudyBinaries_v3/: Classifier.py  Generator.py  __config__.py
EnsembleTrain/: analyze_failed_job.ipynb  condor.sub  submit.sh
MoneyPlot/: condor_02.sub  results.ipynb
Simulation/: DAT548312_00.csv  DummyCentralTriggerDense.cc  EventFileExporter.xml  Make-depend  XbAlgo.h  XbArray.cc  XbArray.h  bootstrap_trigger_all.xml
Trigger/: README.md  background_reduction.py  bayes_classifier.ipynb  benchmark_numba.ipynb  build_probability_dataset.py  compare_backgrounds.py  extract_false_positives.py  false_positives_analysis.ipynb  low_vem_traces.py  online_background_calibration.ipynb  plot_results.py  plot_signal.py  plot_trace.py  random_trace.ipynb  roc_curve_model_background.py  roc_curve_real_background.py  spd_energy.py  test_batch_normalization.ipynb  test_code.py  test_new_framework.py  test_real_background.py  train_model.py  train_model.sh
UMDTask/: UMDExtractor.cxx
scripts/: README.md  README.me  auger_env.sh  auger_env_18.sh  auger_env_22.sh  binaries.py  condor_execute.sh  condor_submit.sh  pget  show_trace.ipynb
scripts/pyik/corsikainterface/: CMakeLists.txt  CorsikaBlock.cc  CorsikaBlock.h  CorsikaIOException.h  CorsikaParticle.cc  CorsikaParticle.h  CorsikaShower.cc  CorsikaShower.h  CorsikaShowerFile.cc  CorsikaShowerFile.h  CorsikaShowerFileParticleIterator.cc  CorsikaShowerFileParticleIterator.h  CorsikaUtilities.cc  CorsikaUtilities.h  NucleusProperties.cc  NucleusProperties.h  README  RawCorsikaFile.cc  RawCorsikaFile.h  ShowerParticleIterator.cc  ShowerParticleIterator.h  ShowerParticleList.h  __init__.py  corsika.i  main.cc
thesis/: README.md  gliederung.md  gliederung.txt  literature.bib  thesis.tex
(+1151 files in other folders)
